initial setup of front end assets with Elixir, refs #3

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,1 +1,5 @@
+// Bootstrap
+@import "../../../vendor/bower_components/bootstrap/less/bootstrap.less";
 
+// Font Awesome
+@import "../../../vendor/bower_components/fontawesome/less/font-awesome.less";
