--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -3,3 +3,51 @@
 
 // Font Awesome
 @import "../../../vendor/bower_components/fontawesome/less/font-awesome.less";
+@fa-font-path: "../../fonts";
+
+/* General Layout */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    padding-top: 70px;
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+
+    .container {
+        padding-top: 20px;
+    }
+}
+
+img.avatar {
+    border: 1px solid #555;
+}
+
+img.nav-avatar {
+    float: left;
+    position: relative;
+    top: -6px;
+    left: -8px;
+    max-height: 35px;
+}
+
+h1 {
+    margin: 0px 0px 5px 0px;
+    display: block;
+
+    a {
+        &.refresh {
+            font-size: 50%;
+            position: absolute;
+            top: -10;
+            margin-left: 20px;
+        }
+    }
+}
