activate gist for voting, closes #6

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,9 @@
 // Bootstrap
 @import "../../../vendor/bower_components/bootstrap/less/bootstrap.less";
 
+// Bootstrap-Toggle
+@import (inline) "../../../vendor/bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
+
 // Font Awesome
 @import "../../../vendor/bower_components/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fonts";
