added emojione for emoji handling in comments, closes #10

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -11,6 +11,9 @@
 // Prism
 @import (inline) "../../../resources/assets/css/prism.css";
 
+// Emojione
+@import (inline) "../../../vendor/emojione/emojione/assets/css/emojione.css";
+
 /* General Layout */
 html {
     position: relative;
