--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -72,3 +72,14 @@ h1 {
         max-height: 50px;
     }
 }
+
+.markdown {
+    background: #f5f2f0;
+    border: 1px solid #cccccc;
+    color: black;
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+    text-shadow: 0 1px white;
+    border-radius: 4px;
+}
