add vote tallies to gists, closes #15

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -67,7 +67,7 @@ h1 {
     }
 }
 
-.comment {
+.comment, .vote_tallies {
     img.avatar {
         max-height: 50px;
     }
@@ -82,4 +82,11 @@ h1 {
     overflow: auto;
     text-shadow: 0 1px white;
     border-radius: 4px;
+}
+
+.vote_tallies {
+    h2 {
+        margin-top: 0px;
+        padding-top: 0px;
+    }
 }
