--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -117,4 +117,41 @@ h1 {
         border-right-color:#ddd;
         border-width:8px;
     }
+
+    #comment-form {
+        border: 1px solid #e3e3e3;
+        background: #ffffff;
+        margin-bottom: 3em;
+        padding: 0;
+
+        #vote-buttons {
+            opacity: .8;
+            float: left;
+
+            img {
+                max-height: 24px;
+            }
+        }
+
+        textarea {
+            height: 75px;
+            border: none;
+            resize: none;
+
+            &:focus {
+                box-shadow: none;
+            }
+        }
+
+        .comment-form-submit {
+            border-top: 1px solid #e9e9e9;
+            padding: .5em 1em;
+            margin-bottom: 0;
+            overflow: hidden;
+
+            .btn-default {
+                float: right;
+            }
+        }
+    }
 }
